# Profit-Prophet

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/: __main__.py
src/cache/asyncio/: decorators.py
src/config/: __init__.py  config_dto.py  config_loader.py
src/database/: __init__.py  base.py  database.py  model.py
src/database/alembic/: __init__.py  env.py  script.py.mako
src/database/alembic/versions/: __init__.py  a8e97522d1d7_first_commit.py
src/database/models/: __init__.py  asset_model.py  asset_type_model.py  portfolio_model.py  score_answer_model.py  score_question_model.py  transaction_model.py
src/dtos/: __init__.py  base_dto.py
src/finance/: __init__.py  allocation.py  finance_manager.py  portfolio.py  position.py  position_strategy.py  price_provider.py
src/inout/: __init__.py  logger.py  mixins.py  user_interface.py  user_screen.py
src/inout/screens/: __init__.py  allocation_menu.py  crud_menu.py  main_menu.py
src/scrapers/: __init__.py  browser_engine.py
src/scrapers/google_finance/: __init__.py  scraper.py
src/scrapers/google_finance/dtos/: __init__.py  quote_dto.py  quote_section_dto.py  quote_section_header_dto.py  quote_section_overview_dto.py  quote_sections_dto.py
